# bitbank-binance-bot

./: .env.example  .gitignore  README.md  binance_client.py  bitbank_client.py  bot.py  config.py  optimizer.py  pyproject.toml  strategy.py
experiments/: runner.py  strategies.py
simulator/: __init__.py  backtest.py  data_feed.py  market_simulator.py  monte_carlo.py  portfolio_simulator.py  walk_forward.py
tests/: conftest.py  test_advanced_simulators.py  test_backtest.py  test_binance_client.py  test_bitbank_client.py  test_bitbank_signals.py  test_bot.py  test_data_feed.py  test_experiments.py  test_optimizer.py  test_simulator.py  test_strategy.py
